CustomObjects/objects/invoiceit_s__Transaction__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <fields>
        <fullName>invoiceit_s__AVS_Response_Code__c</fullName>
        <label>AVS Response Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__AVS_Zip__c</fullName>
        <label>AVS Zip</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Code_Response__c</fullName>
        <description>Card Code Response</description>
        <inlineHelpText>CVV/CVV2 has matched or not</inlineHelpText>
        <label>Card Code Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exception_Message__c</fullName>
        <description>Exception Message
When a Transaction is created and Payment is not created against Invoice</description>
        <inlineHelpText>Exception Message
When a Transaction is created and Payment is not created against Invoice</inlineHelpText>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Gateway_Date__c</fullName>
        <label>Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Gateway_ID__c</fullName>
        <label>Response Gateway ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Is_Payment_Processed_Successfully__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It determines whether the Transaction has created Payment and Payment Allocation.
This is only for charged transactions.</description>
        <inlineHelpText>It determines whether the Transaction has created Payment and Payment Allocation.
This is only for charged transactions.</inlineHelpText>
        <label>Payment Process Successful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Gateway__c</fullName>
        <label>Payment Gateway</label>
        <referenceTo>invoiceit_s__Gateway__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <referenceTo>invoiceit_s__Payment_Method__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Plan_Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan Installment</label>
        <referenceTo>invoiceit_s__Payment_Plan_Installment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Run</label>
        <referenceTo>invoiceit_s__Payment_Run__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Request_Credit_Card_Number__c</fullName>
        <label>Request - Credit Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Request_Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request - Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Request_Transaction_Type__c</fullName>
        <label>Request - Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Request_Type_Of_Payment__c</fullName>
        <label>Request - Type Of Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Response_Status__c</fullName>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Transaction_Tag__c</fullName>
        <description>In Payeezy, this field populate the Transaction Tag</description>
        <inlineHelpText>In Payeezy, this field populate the Transaction Tag</inlineHelpText>
        <label>Transaction Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>invoiceit_s__Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>invoiceit_s__TranscationPaymentRun</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Payment_Run__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>invoiceit_s__Payment_Run__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>TranscationPaymentRun</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TRX-{000000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Test</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( invoiceit_s__Amount__c )</errorConditionFormula>
        <errorMessage>Amount should not be changed</errorMessage>
    </validationRules>
</CustomObject>